--- a/projects/interestpage.css
+++ b/projects/interestpage.css
@@ -39,11 +39,11 @@ main h2 {
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-bottom: 0.4em;
     margin-top: 2.3em;
-    font-size: 18;
+    font-size: 18pt;
     color: rgb(187, 13, 13);
 }
 main h3 {
-    font-size: 15;
+    font-size: 15pt;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: rgb(187, 13, 13);
 
