--- a/projects/project3/project3.css
+++ b/projects/project3/project3.css
@@ -1,20 +1,20 @@
 
 body{
-    background-image: url(/projects/project3/Oxford_Blue.png); 
+    background-image: url(/projects/project3/Oxford_Blue.png) ;
+    background-repeat: repeat;
     font-family: Arial, Helvetica, sans-serif;
     text-align: justify;
     position: relative;
-
 }
 
-header {
-    margin-top: -100pt;
+main {
+    background-image: url(/projects/project3/Oxford_Blue.png) repeat;
+
 }
 
 header img {
     position: relative;
     margin-left: 20pt;
-    top: 130px;
     z-index: 2;
     height: 100pt;
     width: auto;
@@ -54,35 +54,26 @@ header nav {
 }
 
 .title {
-    font-size: 150pt;
+    font-size: 100pt;
     font-weight:bolder ;
-    top:-530pt;
     z-index: 2; 
-    position: relative;
     text-align: center;
-    margin-bottom: -250pt;
-
-}
-
-.title2 {
-    font-size: 30pt;
-    text-align: right;
-    margin-left:  400pt;
-    top: -570pt;
-    position: relative;
-    text-align: justify;
     color: white;
+    margin-top: -5pt;
+    margin-bottom: 40pt;
 
 }
+
 
 .introduction {
     font-size: 20pt;
     text-align: right;
-    margin-left:  400pt;
-    top: -570pt;
     position: relative;
     text-align: justify;
     color: white;
+    bottom: 50pt;
+    padding: 0 100pt 0 100pt;
+
 
 }
 
@@ -98,4 +89,15 @@ header nav {
     margin: 0 auto;
     margin-top: 10px;
 
+}
+
+.list {
+    list-style-image: url(cp.ico);
+}
+
+footer {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15pt;
+    color: white;
+    text-align: center;
 }
