Final Touch, it's all done. Should be good to be submitted.

--- a/projects/project3/project3.css
+++ b/projects/project3/project3.css
@@ -1,6 +1,6 @@
 
 body{
-    background-image: url(/projects/project3/Oxford_Blue.png) ;
+    background-image: url(/projects/project3/blue-material-background.jpg) ;
     background-repeat: repeat;
     font-family: Arial, Helvetica, sans-serif;
     text-align: justify;
