--- a/projects/project3/project3.css
+++ b/projects/project3/project3.css
@@ -1,5 +1,5 @@
 
-body{
+body {
     background-image: url(/projects/project3/blue-material-background.jpg) ;
     background-repeat: repeat;
     font-family: Arial, Helvetica, sans-serif;
@@ -7,6 +7,9 @@ body{
     position: relative;
 }
 
+main {
+    background-image: url(blue-material-background.jpg) repeat;
+}
 
 header img {
     position: relative;
