--- a/projects/project4/pagelayout2.css
+++ b/projects/project4/pagelayout2.css
@@ -26,27 +26,26 @@ header {
 
 header nav {
     background-color: rgb(161, 38, 38);
-    text-decoration: none;
-    font-size: 30px;
-    text-align: center;
     padding: 15px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     border: thin solid;
+    text-align: center;
 }
 
 .navigation {
+    font-size: 30px;
     text-decoration: none;
     color: black;
-    padding: 7px 20px 7px 20px;
-    margin: 50px;
     font-weight: bolder;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    margin: 0 50pt;
 
 }
 
 .navigation:hover {
     background-color: rgb(140, 138, 138);
     text-shadow: 3px 0px 4px rgb(54, 54, 54);
-    border-radius: 20pt;
+    border-radius: 50pt;
+
 
 }
 
@@ -58,17 +57,18 @@ header nav {
 }
 
 body {
-    background-image: url(lightbackground.jpg);
+    background-image: url(stars.jpg);
     background-repeat: repeat;
-    background-color:beige;
     text-align: justify;
-    font-size: 15pt;
+    font-size: 14pt;
     font-family: Arial, Helvetica, sans-serif;
 
 }
 
 main {
     line-height: 2;
+    border: thick solid black;
+   
 }
 
 /*.poster {
@@ -83,8 +83,17 @@ main {
 */
 .description {
     padding-top: 5px;
-
+    margin-left: auto;
+    margin-right: 0px 10px 0px 0px;
+    color: white;
     
+}
+
+.overview {
+    font-size: 20pt;
+    margin: 0;
+    font-weight: bolder;
+
 }
 
 .poster {
@@ -93,6 +102,7 @@ main {
     width: 30.6%;
     float: left;
     height: 1%;
+    box-shadow: 0px 0px 20px bisque;
 }
 
 .clear {
