--- a/projects/project4/pagelayout2.css
+++ b/projects/project4/pagelayout2.css
@@ -84,7 +84,7 @@ main {
 .description {
     padding-top: 5px;
     margin-left: auto;
-    margin-right: 0px 10px 0px 0px;
+    margin-right: 30px;
     color: white;
     
 }
