--- a/projects/project8/forms.css
+++ b/projects/project8/forms.css
@@ -11,7 +11,7 @@ header {
 header h1 {
     color: white;
     font-family:Verdana, Geneva, Tahoma, sans-serif ;
-    font-size: 50px;
+    font-size: 67px;
     text-align: center;
     margin: 0;
     margin-bottom: 20px;
@@ -65,15 +65,10 @@ nav a {
     gap: 20px;
     margin: 15px 20px 0 15px;
     justify-content: center;
-    text-align: center;
 }
 
 .form-row, .check-row label {
-    text-align: auto;
-}
-
-option {
-    text-align: center;
+    text-align: right;
 }
 
 .form-row, .check-row input {
@@ -103,11 +98,9 @@ footer {
 @media ONLY screen AND (max-width: 600px) {
     .form-row, .check-row {
         flex-direction: column;
-        justify-content: left;
     }
 
     .form-row label, .spacer {
-
         text-align: left;
     }
 }
